# notesync

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/notesync/: __init__.py  api.py  auth.py  cli.py  export.py  markdown.py  models.py  sync.py
tests/: test_export.py  test_sync.py  test_sync_migration.py
