[project]
name = "notesync"
version = "0.1.0"
description = "Export and sync Granola notes and transcripts to markdown files"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "click>=8.1.7",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
    "markdownify>=0.11.6",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[project.scripts]
notesync = "notesync.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/notesync"]
